--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Peter
-subtitle: This is where I will tell my friends way too much about me
+subtitle: This is where you and I learn and grow together
 ---
